--- a/public/css/app.css
+++ b/public/css/app.css
@@ -103,7 +103,8 @@ footer.light .footer-copyright{ background: none repeat scroll 0 0 rgba(255, 255
   box-shadow: none; -webkit-box-shadow: none; -moz-box-shadow: none; -ms-box-shadow: none; -o-box-shadow: none;}
 .widget.subscribe p{  margin-bottom: 18px;}
 .widget li a{ color: #ebeae8;transition:1.5s cubic-bezier(0.075, 0.82, 0.165, 1);}
-.widget li a:hover{ color: #ffc107;padding-left: 20px;}
+.widget li a:hover{ color: #ffc107;}
+.widget .thumbnail-widget li a:hover{padding-left: 20px;}
 .widget-title {margin-bottom: 20px;}
 .widget-title span {background: #e9e9e9 none repeat scroll 0 0;display: block; height: 1px;margin-top: 25px;position: relative;width: 20%;}
 .widget-title span::after {background: inherit;content: "";height: inherit;    position: absolute;top: -4px;width: 50%;}
@@ -239,4 +240,16 @@ transition: all 250ms ease-in-out 0s;
         font-size: 30px;
         line-height: 70px;
     }
+}
+
+/* footer link */
+.footer-copyright a{
+  color:#f7bd10;
+  transition:0.5s ;
+  
+}
+
+.footer-copyright a:hover{
+  color:#f7bd10;
+  opacity: 0.5;
 }
