all students added and fees generation fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -162,6 +162,9 @@ transition: all 250ms ease-in-out 0s;
     border-top-right-radius: 30px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.075);
 }
+#login form{
+    max-width: 600px;
+}
 
 .registration-form .form-icon{
 	text-align: center;
