news desc and news error corrected

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -266,3 +266,21 @@ transition: all 250ms ease-in-out 0s;
   color:#f7bd10;
 
 } 
+/* blink code start here */
+.blink {
+  animation: blink 1s steps(1, end) infinite;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+/* end blink code */
