scollbar changed and fee structure uploaded

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -284,3 +284,23 @@ transition: all 250ms ease-in-out 0s;
 }
 
 /* end blink code */
+/* scrollable bar change */
+*::-webkit-scrollbar {
+  width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: #e4e4e4;
+  border-radius:0px 100px 100px 0px;
+}
+
+*::-webkit-scrollbar-thumb {
+  border: 5px solid transparent;
+  border-radius: 100px;
+  background-color: #444444;
+  background-clip: content-box;
+}
+.card{
+border-radius: 10px !important;
+  
+}
